examples/issues/issue_0519_b/expected/production/kubeapp-ns_apps_v1_ingress_kubeapp.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  labels:
    app: kubeapp
  name: kubeapp
  namespace: kubeapp-ns
spec:
  backend:
    serviceName: kubeapp-production
    servicePort: 80
