examples/issues/issue_0519_b/expected/production/kubeapp-ns_networking.k8s.io_v1beta1_ingress_kubeapp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: kubeapp
  name: kubeapp
  namespace: kubeapp-ns
spec:
  backend:
    serviceName: kubeapp-production
    servicePort: 80
