examples/issues/issue_0519_b/expected/production/kubeapp-ns_~g_v1_service_kubeapp-production.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubeapp
    env: production
  name: kubeapp-production
  namespace: kubeapp-ns
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: kubeapp
    env: production
  type: LoadBalancer
